--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -1358,6 +1358,33 @@
             "apply":"regex",
             "kwargs":{
                 "from":[
+                    ".*mfaq.+"
+                ],
+                "to":"mfaq"
+            },
+            "alias":"b"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*mc.+"
+                ],
+                "to":"mc"
+            },
+            "alias":"b"
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            },
+            "alias":"b"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
                     ".*search.+"
                 ],
                 "to":"search"
