--- a/scoring/Policy/configs/partner_data_config.json
+++ b/scoring/Policy/configs/partner_data_config.json
@@ -1582,7 +1582,173 @@
             }
         }
     ], 
+    "State": [
+        {
+            "apply": "substitute", 
+            "kwargs":{
+                "from": [
+                "California",
+                "Utah",
+                "Montana",
+                "Florida",
+                "Oregon",
+                "Washington",
+                "Colorado",
+                "Arizona",
+                "Nevada",
+                "Idaho",
+                "Wyoming",
+                "New Mexico",
+                "Alaska",
+                "Hawaii"], 
+                "to": "West"
+            }, 
+            "alias": "region"
+        }, 
+        {
+            "apply": "substitute", 
+            "kwargs":{
+                "from": [
+                "Alabama",
+                "Louisiana",
+                "Virginia",
+                "Oklahoma",
+                "South Carolina",
+                "North Carolina",
+                "Texas",
+                "Mississippi",
+                "Georgia",
+                "Kentucky",
+                "Maryland",
+                "Tennessee",
+                "West Virginia",
+                "Arkansas"], 
+                "to": "South"
+            }, 
+            "alias": "region"
+        },
+        {
+            "apply": "substitute", 
+            "kwargs":{
+                "from": [
+                "Illinois",
+                "Kansas",
+                "Ohio",
+                "Michigan",
+                "Missouri",
+                "Iowa",
+                "Nebraska",
+                "North Dakota",
+                "Minnesota",
+                "Indiana",
+                "Wisconsin",
+                "South Dakota"], 
+                "to": "Midwest"
+            }, 
+            "alias": "region"
+        },
+        {
+            "apply": "substitute", 
+            "kwargs":{
+                "from": [
+                "Pennsylvania",
+                "New York",
+                "New Jersey",
+                "Rhode Island",
+                "Massachusetts",
+                "Vermont",
+                "New Hampshire",
+                "Delaware",
+                "Maine",
+                "Connecticut",
+                "District of Columbia"], 
+                "to": "Northeast"
+            }, 
+            "alias": "region"
+        },
+        {
+            "apply": "fill_na", 
+            "kwargs":{
+                "value": "unknown"
+            }, 
+            "alias": "region"
+        }
+    ],
     "Lead_Ad_Campaign__c":[
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*medigap.+"
+                ],
+                "to":"medigap"
+            },
+            "alias":"campaign_product"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*medicare.+"
+                ],
+                "to":"medicare"
+            },
+            "alias":"campaign_product"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*advantage.+"
+                ],
+                "to":"medicare advantage"
+            },
+            "alias":"campaign_product"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*eip.+"
+                ],
+                "to":"brand eip"
+            },
+            "alias":"campaign_product"
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            },
+            "alias":"campaign_product"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*mfaq.+"
+                ],
+                "to":"mfaq"
+            },
+            "alias":"b"
+        },
+        {
+            "apply":"regex",
+            "kwargs":{
+                "from":[
+                    ".*mc.+"
+                ],
+                "to":"mc"
+            },
+            "alias":"b"
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            },
+            "alias":"b"
+        },
         {
             "apply":"regex",
             "kwargs":{
