--- a/scoring/L1/configs/feature_config.json
+++ b/scoring/L1/configs/feature_config.json
@@ -378,7 +378,7 @@
             "apply": "regex",
             "kwargs": {
                 "from": [
-                    ".*Partner\b"
+                    ".*Partner.*"
                 ],
                 "to": "Partner"
             },
@@ -398,7 +398,7 @@
             "apply": "regex",
             "kwargs": {
                 "from": [
-                    ".*Facebook\b"
+                    ".*Facebook.*"
                 ],
                 "to": "Facebook"
             },
@@ -408,7 +408,7 @@
             "apply": "regex",
             "kwargs": {
                 "from": [
-                    ".*Email\b"
+                    ".*Email.*"
                 ],
                 "to": "Email"
             },
