--- a/scoring/L1/configs/feature_config.json
+++ b/scoring/L1/configs/feature_config.json
@@ -182,6 +182,12 @@
                 ],
                 "to": "others"
             }
+        }, 
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            }
         }
     ],
     "Lead_Ad_Source__c": [
@@ -361,6 +367,12 @@
                 ],
                 "to": "others"
             }
+        }, 
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            }
         }
     ],
     "LeadSource": [
@@ -422,6 +434,13 @@
                 ],
                 "to": "ApplyForMedicare"
             },
+            "alias": "Source"
+        }, 
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            }, 
             "alias": "Source"
         }
     ]
