check income group

--- a/scoring/L1/configs/paid_data_config.json
+++ b/scoring/L1/configs/paid_data_config.json
@@ -3702,12 +3702,6 @@
     ],
     "Individual Occupation Group":[
         {
-            "apply":"fill_na",
-            "kwargs":{
-                "value":"unknown"
-            }
-        },
-        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3742,6 +3736,20 @@
                 "to":"High income"
             },
             "alias":"Occupation_group"
+        }, 
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            }
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            }, 
+            "alias":"Occupation_group"
+
         }
     ],
     "Individual Education":[
